<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskMan</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="label_name">Name:</string>
    <string name="filler_process_name">Process Name</string>
    <string name="filler_process_pid">1234</string>
    <string name="label_running_tasks">Running Tasks:</string>
    <string name="label_running_processes">Running Processes:</string>
    <string name="label_running_services">Running Services:</string>
    <string name="label_pid">PID:</string>
    <string name="filler_process_uid">1000</string>
    <string name="label_uid">UID:</string>
    <string name="filler_class">com.package.class</string>
    <string name="label_overview">Overview:</string>
    <string name="label_type">Type:</string>
    <string name="filler_type">Task</string>
    <string name="label_nothing_selected">Nothing Selected...</string>
    <string name="filler_label">Label</string>
    <string name="filler_content">Content</string>
</resources>
